Bug 542162 - Use fullname and Postscript name tables for src local lookups. r=jkew